user primary apis completed
